fix: menu button shadow covering scrollbar

--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -1,7 +1,7 @@
 .menu {
     position: fixed;
-    top: 0;
-    right: 8px;
+    top: 8px;
+    right: 16px;
     z-index: 1000;
 
     .btn {
@@ -16,7 +16,9 @@
         align-items: center;
         justify-content: center;
         gap: 4px;
-        box-shadow: 0 0 1rem 2rem var(--background-color);
+        box-shadow: -1.5rem 0.5rem 2rem 0.25rem var(--background-color);
+        // box-shadow: 0 0 1rem 2rem var(--background-color);
+        // box-shadow: -1.5rem .5rem 2rem .25rem red;
 
         &:hover {
             .bar {
